--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital@0;1&display=swap");
+
+.test::before {
+  content: "#";
+  color: #6fcf97;
+}
+
+:root {
+  background-color: #282c33;
+}
+
+.global-container {
+  max-width: 1280px;
+  margin: 33.33vh auto 0;
+  padding: 0 15px;
+}
