--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind variants;
 
 @import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital@0;1&display=swap");
 
